Move minified javascript file to dist folder

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>CSS Dropdown Menus</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-  <script src="src/ariaMenu.min.js"></script>
+  <script src="dist/ariaMenu.min.js"></script>
   <link href="src/ariaMenu.css" type="text/css" rel="stylesheet">
   <link href="src/theme/default.css" type="text/css" rel="stylesheet">
   <!-- Demo styling -->
