--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     }
 
     .code {
+      margin-top: 300px;
       width: 100%;
       border: 1px;
       resize: none;
@@ -71,12 +72,12 @@
     </script>
 
     <ul class="aria-menu css-fallback">
-      <li><a href="#">Home</a></li>
+      <li><a href="#home">Home</a></li>
       <li>
         <a href="#">About</a>
         <ul>
-          <li><a href="#">The Company</a></li>
-          <li><a href="#">The Team</a></li>
+          <li><a href="#company">The Company</a></li>
+          <li><a href="#team">The Team</a></li>
         </ul>
       </li>
       <li>
