--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="dist/ariaMenu.min.js"></script>
-  <link href="src/ariaMenu.css" type="text/css" rel="stylesheet">
-  <link href="src/theme/default.css" type="text/css" rel="stylesheet">
+  <link href="dist/ariaMenu.min.css" type="text/css" rel="stylesheet">
   <!-- Demo styling -->
   <style type="text/css">
     p {
@@ -60,10 +59,19 @@
       <dt>Size (minifed & gziped)</dt>
       <dd>1.0 KB</dd>
       <dt>Size (minfied)</dt>
-      <dd>2.6 KB</dd>
+      <dd>2.3 KB</dd>
       <dt>Size (original with comments)</dt>
-      <dd>7.1 KB</dd>
+      <dd>9.0 KB</dd>
     </dl>
+
+    <p>
+      <a href="https://github.com/jantimon/ariaMenu">Github project</a>
+      <br/>
+      <a href="https://travis-ci.org/jantimon/ariaMenu">
+        <img src="https://api.travis-ci.org/jantimon/ariaMenu.png" alt="Travis Build" style="max-width:100%;">
+      </a>
+    </p>
+
 
     <script>
       jQuery(function ($) {
