--- a/responsive.html
+++ b/responsive.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="dist/ariaMenu.min.js"></script>
-  <link href="dist/ariaMenu.responsive.css" type="text/css" rel="stylesheet">
+  <link href="dist/styles/ariaMenu.responsive.css" type="text/css" rel="stylesheet">
   <!-- Demo styling -->
   <style type="text/css">
     p {
