--- a/touch.html
+++ b/touch.html
@@ -42,23 +42,23 @@
       <li>
         <a href="#">Menu</a>
         <ul>
-          <li><a href="#">Home</a></li>
+          <li><a href="touch.html?home">Home</a></li>
           <li>
-            <a href="#">About</a>
+            <a href="touch.html?about">About</a>
             <ul>
-              <li><a href="#">The Company</a></li>
-              <li><a href="#">The Team</a></li>
+              <li><a href="touch.html?company">The Company</a></li>
+              <li><a href="touch.html?team">The Team</a></li>
             </ul>
           </li>
           <li>
-            <a href="#">Services</a>
+            <a href="touch.html?services">Services</a>
             <ul>
-              <li><a href="#">One Service</a></li>
-              <li><a href="#">Two Service</a></li>
-              <li><a href="#">Three Service</a>
+              <li><a href="touch.html?one">One Service</a></li>
+              <li><a href="touch.html?two">Two Service</a></li>
+              <li><a href="touch.html?three">Three Service</a>
                 <ul>
-                  <li><a href="#">Setup</a></li>
-                  <li><a href="#">Implementation</a></li>
+                  <li><a href="touch.html?setup">Setup</a></li>
+                  <li><a href="touch.html?implementation">Implementation</a></li>
                 </ul>
               </li>
               <li><a href="#">Four</a></li>
