Overhaul the tap usability to match the iOS default implementation http://www.nczonline.net/blog/2012/07/05/ios-has-a-hover-problem/

--- a/dev.html
+++ b/dev.html
@@ -4,7 +4,7 @@
   <title>CSS Dropdown Menus</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-  <script src="dist/ariaMenu.min.js"></script>
+  <script src="src/ariaMenu.js"></script>
   <link href="dist/styles/ariaMenu.responsive.css" type="text/css" rel="stylesheet">
   <!-- Demo styling -->
   <style type="text/css">
