--- a/responsive.html
+++ b/responsive.html
@@ -30,15 +30,15 @@
 
 <div class="content wide">
   <article role="main">
-    <h1>CSS Dropdown Menus</h1>
+    <h1 id="title">CSS Dropdown Menus</h1>
 
     <script>
       jQuery(function ($) {
-        $(".aria-menu").ariaMenu({secondTap: true});
+        $(".menu").ariaMenu();
       });
     </script>
 
-    <ul class="aria-menu css-fallback">
+    <ul class="menu css-fallback">
       <li>
         <a href="#">Menu</a>
         <ul>
@@ -94,7 +94,7 @@
       $(".code").val($("<div/>").append($("ul.aria-menu").clone()).html() + "\n" + $("<div/>").append($("body script:first").clone()).html());
       // Alert the current state
       var state = window.location.search.substring(1);
-      if(state) alert(state);
+      if(state) $("#title").text(state).text(state).hide().fadeIn('fast');;
     </script>
 
   </article>
